# kei-editor

./: .clangd  README.md  config.json  meson.build
.github/: dependencies
.github/scripts/: embed_json.bash
.github/workflows/: CI.yml
include/: config.hh  logger.hh  utils.hh
include/core/: config.hh  exception.hh  logger.hh  types.hh
include/core/types/: pair.hh
include/event/: event.hh
include/interface/: color.hh  context.hh  editor.hh  event.hh  font.hh
include/ui/: color.hh  editor.hh  font.hh
include/ui/context/: context.hh  exception.hh
include/ui/object/: box.hh  circle.hh
src/: config.cc  logger.cc  main.cc  meson.build  utils.cc
src/core/: config.cc  logger.cc  meson.build  utils.cc
src/event/: event.cc  meson.build
src/interface/: color.cc  context.cc  editor.cc  event.cc  font.cc  meson.build
src/ui/: color.cc  editor.cc  font.cc  meson.build
src/ui/context/: context.cc  meson.build
src/ui/object/: box.cc  circle.cc  meson.build
